# CyberChessCoach

./: .dockerignore  .env.example  .env.prod.example  .gitignore  .pre-commit-config.yaml  .trivyignore  ANDROID_UI_GUIDELINES.md  ARCHITECTURE.md  CI_CD_PIPELINE.md  CLAUDE.md  Dockerfile  ENGINE_INTEGRATION.md  ENGINE_POOL_ARCHITECTURE.md  LICENSE.md  LLM_OUTPUT_SCHEMAS.md  OPENAPI_SPEC.yaml  PROJECT_ARCHITECTURE.md  README.md  REDIS_CACHING_STRATEGY.md  SECA_SPEC.md  SYSTEM_DIAGRAM.md  SYSTEM_PIPELINE.md  TESTING.md  docker-compose.prod.yml  docker-compose.yml  fly.toml  pyproject.toml  run_all_tests.py  seca.db  seca_doctor.py  trivy.yaml
.claude/: settings.json
.github/: codeql-config.yml
android/: README.md  RELEASE.md  TESTING.md  gradle.properties
android/app/src/main/cpp/: CMakeLists.txt  SachmatuLenta.cpp  SachmatuLenta.h  engine_jni.cpp  native_chess_engine.cpp
data/: seca.db
docs/: API_CONTRACTS.md  ARCHITECTURE.md  CLAUDE_INIT_CHECKLIST.md  CLAUDE_SETUP_GUARDRAILS.md  CLAUDE_TASK_TEMPLATES.md  DEPLOYMENT.md  OPERATIONS.md  OPERATIONS_RETRIES.md  RELEASE.md  SECA.md  TESTING.md  THREAT_MODEL.md
engine/: perft_test.cpp  strength_test.cpp
llm/: .gitignore  Dockerfile  Dockerfile.api  README_DEV.md  cache_keys.py  check_coverage_thresholds.py  check_db.py  confidence_language_controller.py  docker-compose.yml  elite_engine_service.py  engine_eval.py  engine_pool.py  explain_pipeline.py  fen_hash.py  governor.py  host_app.py  host_app_temp.py  neural_skill_world_model_training.py  opening_book.py  package.json  predictive_cache.py  redis_client.py  (+14 more)
(+512 files in other folders)
